repos/team-1/bootstrap-k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-1
  labels:
    teamName: team-1
