repos/team-1/bootstrap-k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: alb
  namespace: team-1
spec:
  gatewayClassName: gatewayclass
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: alb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            teamName: "team-1"
        from: Selector
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            teamName: "team-1"
        from: Selector
